--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,105 @@
-.App {
-  text-align: center;
-  margin-top: 200px;
+html, body, .App, .App>div {
+  height: 100vh;
+  margin: 0;
+  margin-top: 0;
 }
-.input-with-hint {
-  border: 0.9px solid #888;
-  padding: 0.5em 1em;
-  border-radius: 0.2em;
-  font-size: 1em;
-  color: #333;
-  width: 100%;
+
+
+.App{
+  background-color: black;
+  color:white;
+  height : 100vh;
+  margin:10;
 }
-.input-with-hint:hover {
-  border-color: #66afe9;
+
+
+input{
+  
+  font-family: Helvetica Neue;
+  color : white !important;
+  opacity : 0.5 ;
+  border : none;
+  
 }
-.input-with-hint:focus {
-  border-color: #66afe9;
-  outline: 0;
-  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(102, 175, 233, 0.6);
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(102, 175, 233, 0.6);      
+
+input:focus{
+  outline: none;
 }
-code {
-  background: #e6e6e6;
-  padding: 10px;
-  margin: 5px;
-  line-height: 32px;
-  font-size: 14px;
+
+.input-with-hint{
+  
+  color:white;
+  background: none;
+  font-size: 90px;
+  opacity : 1 ;
+  
+  
+}
+
+
+::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
+ 
+  color: white;
+  opacity: 1; /* Firefox */
+ 
+}
+
+:-ms-input-placeholder { /* Internet Explorer 10-11 */
+  color: white;
+  
+}
+
+::-ms-input-placeholder { /* Microsoft Edge */
+  color: white;
+  
+}
+
+.selectedCity{
+  color:white;
+  background: none;
+  font-size: 90px;
+  opacity : 1 ;
+  letter-spacing: .2rem;
+  margin-top:.1rem;
+  margin-left:.2rem;
+
+
+}
+
+* {
+  cursor: none;
+  background-color: #333;
+}
+
+.cursor-dot,
+.cursor-dot-outline {
+  pointer-events: none;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 50%;
+  opacity: 1;
+  transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
+  z-index: 200;
+}
+
+.cursor-dot {
+  width: 8px;
+  height: 8px;
+  background-color: #dc5656;
+}
+
+.cursor-dot-outline {
+  width: 30px;
+  height: 30px;
+  background: none;
+  border: 1px solid #dc5656;
+}
+
+.links-container {
+  display: grid;
+  place-items: center;
+  grid-template-columns: repeat(2, 1fr);
+  row-gap: 40px;
 }
